fix overlapping icon on nested content with multiple items

--- a/src/Umbraco.Web.UI.Client/src/less/components/umb-nested-content.less
+++ b/src/Umbraco.Web.UI.Client/src/less/components/umb-nested-content.less
@@ -92,7 +92,6 @@
     }
 
     .umb-nested-content__item-icon {
-        position: absolute;
         margin-top: -3px;
         font-size: 22px;
     }
